--- a/vtr-ui/src/app/components/ui/ui-rounded-rectangle-custom-radio-list/ui-rounded-rectangle-custom-radio-list.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-rounded-rectangle-custom-radio-list/ui-rounded-rectangle-custom-radio-list.component.scss
@@ -174,6 +174,14 @@
 				opacity: 0.6;
 				pointer-events: none;
 
+				@media #{$white-on-black} {
+					@include high-contrast-black-text-color-disabled;
+				}
+
+				@media #{$black-on-white} {
+					@include high-contrast-white-text-color-disabled;
+				}
+
 				&:hover {
 					box-shadow: $radio-unselected-box-shadow;
 				}
@@ -229,6 +237,14 @@
 				background: $grey_lighter;
 				opacity: 0.6;
 				pointer-events: none;
+
+				@media #{$white-on-black} {
+					@include high-contrast-black-text-color-disabled;
+				}
+
+				@media #{$black-on-white} {
+					@include high-contrast-white-text-color-disabled;
+				}
 
 				&::after {
 					background-color: $grey_darker;
